[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://art/UI/Panel_Dialogue.png" type="Texture" id=3]
[ext_resource path="res://tres/IR_Theme.tres" type="Theme" id=4]
[ext_resource path="res://art/UI/fonts/ubuntu/Ubuntu-B.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 3840, 365 )
modulate_color = Color( 0.705882, 0.705882, 0.705882, 0.705882 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 3840, 365 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 5 )

[node name="UI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 920.0
margin_bottom = 664.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Panel/PauseMenu"]
margin_left = 417.0
margin_top = 254.0
margin_right = 543.0
margin_bottom = 350.0
size_flags_horizontal = 4
size_flags_vertical = 14

[node name="Resume " type="Button" parent="Panel/PauseMenu/Menu"]
margin_right = 126.0
margin_bottom = 21.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Resume"

[node name="RestartGame" type="Button" parent="Panel/PauseMenu/Menu"]
margin_top = 25.0
margin_right = 126.0
margin_bottom = 46.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Restart Game"

[node name="SoundVolume" type="Button" parent="Panel/PauseMenu/Menu"]
margin_top = 50.0
margin_right = 126.0
margin_bottom = 71.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Sound Volume"

[node name="Quit" type="Button" parent="Panel/PauseMenu/Menu"]
margin_top = 75.0
margin_right = 126.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Controls" type="Label" parent="Panel/PauseMenu"]
margin_left = 304.0
margin_top = 499.0
margin_right = 656.0
margin_bottom = 704.0
size_flags_horizontal = 4
size_flags_vertical = 10
text = "CONTROLS
		
ZQSD / WASD : Move
Move + Space Bar : Run
Move + Shift Key : Sneak
Left-Click : Shoot
Right-click : Hide / Toggle lever
Escape Key : Pause Menu"
align = 1
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="SoundMenu" type="VBoxContainer" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -72.0
margin_right = 80.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="Panel/SoundMenu"]
margin_left = 52.0
margin_top = 1.0
margin_right = 108.0
margin_bottom = 24.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Music"
align = 1

[node name="MusicVolume" type="HSlider" parent="Panel/SoundMenu"]
margin_top = 34.0
margin_right = 160.0
margin_bottom = 50.0
size_flags_horizontal = 7
size_flags_vertical = 6
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="Sound" type="Label" parent="Panel/SoundMenu"]
margin_left = 35.0
margin_top = 60.0
margin_right = 125.0
margin_bottom = 83.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Sound FX"
align = 1

[node name="SoundFXVolume" type="HSlider" parent="Panel/SoundMenu"]
margin_top = 93.0
margin_right = 160.0
margin_bottom = 109.0
size_flags_horizontal = 7
size_flags_vertical = 6
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="Back" type="Button" parent="Panel/SoundMenu"]
margin_top = 118.0
margin_right = 160.0
margin_bottom = 139.0
size_flags_horizontal = 5
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Back"

[node name="VictoryMenu" type="VBoxContainer" parent="Panel"]
visible = false
anchor_left = 0.408333
anchor_top = 0.363636
anchor_right = 0.591667
anchor_bottom = 0.56392
margin_bottom = -3.05176e-05
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="MissionComplete" type="Label" parent="Panel/VictoryMenu"]
margin_right = 197.0
margin_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Mission Complete"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RestartGame" type="Button" parent="Panel/VictoryMenu"]
margin_top = 94.0
margin_right = 197.0
margin_bottom = 115.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Restart Game"
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="Panel/VictoryMenu"]
margin_top = 119.0
margin_right = 197.0
margin_bottom = 140.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="VBoxContainer" parent="Panel"]
visible = false
margin_right = 960.0
margin_bottom = 704.0
size_flags_horizontal = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Thanks" type="Label" parent="Panel/Quit"]
margin_left = 389.0
margin_top = 342.0
margin_right = 571.0
margin_bottom = 361.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Thanks for playing!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Thanks2" type="Label" parent="Panel/Quit"]
visible = false
margin_left = 376.0
margin_top = 298.0
margin_right = 584.0
margin_bottom = 405.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Music, Sound Design,
Programming,
Game and Level Design:
Yoann Claude
 "
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Thanks3" type="Label" parent="Panel/Quit"]
visible = false
margin_left = 392.0
margin_top = 276.0
margin_right = 567.0
margin_bottom = 427.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Special thanks:
Antoine Pouille,
Camille Distler,
Claire d'Annoville,
Cl√©ment Grenier,
Nayth"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameSaved" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 407.0
margin_top = 322.5
margin_right = 513.0
margin_bottom = 341.5
text = "GAME SAVED"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Panel/PauseMenu/Menu/Resume " to="." method="_on_Resume__pressed"]
[connection signal="pressed" from="Panel/PauseMenu/Menu/RestartGame" to="." method="_on_RestartGame_pressed"]
[connection signal="pressed" from="Panel/PauseMenu/Menu/SoundVolume" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Panel/PauseMenu/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="Panel/SoundMenu/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="Panel/SoundMenu/SoundFXVolume" to="." method="_on_SoundFXVolume_value_changed"]
[connection signal="pressed" from="Panel/SoundMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/VictoryMenu/RestartGame" to="." method="_on_RestartGame_pressed"]
[connection signal="pressed" from="Panel/VictoryMenu/Quit" to="." method="_on_Quit_pressed"]
